添加註解   使用 jQuery 取得點選元素的屬性   添加 ID 與屬性   調整區域樣式並添加回到頂端按鈕   添加網頁、樣式與 JS   Initial commit

--- a/style.css
+++ b/style.css
@@ -6,4 +6,38 @@
           box-sizing: border-box;
   font-family: 微軟正黑體;
 }
+
+nav {
+  position: fixed;
+  width: 100%;
+  padding: 30px;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+}
+
+nav span {
+  display: inline-block;
+  padding: 10px 80px;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+section {
+  height: 100vh;
+  background: #336699;
+  font-size: 72px;
+  text-align: center;
+  color: #fff;
+}
+
+section:nth-of-type(2) {
+  background: #992233;
+}
+
+#toTop {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  cursor: pointer;
+}
 /*# sourceMappingURL=style.css.map */
